--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-location": "^3.3.0",
     "rehype-react": "^7.0.3",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.2",
