ライセンス修正

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dont-bug",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "license": "BSD-3-Clause",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
